# PINN_torch

./: pyproject.toml
pinn_torch/: __init__.py
pinn_torch/models/: simple_2d_heat.py
tests/: __init__.py
